
    Corrected a bug in the table of ISO Prolog specified arithmetic functions
    that is used by the Logtalk compiler when checking arithmetic expressions
    for portability (wrong arity of the bitwise complement function).

    Corrected a bug in the compilation of calls to Prolog proprietary built-in
    meta-predicates that are redefined within an object or category.

    Updated the SICStus Prolog, SWI-Prolog, and YAP config files in order
    to correct a bug in the compilation of the ensure_loaded/1 directive
    when used within a Prolog module being compiled as an object.

    Updated the YAP config file to workaround a bug in the built-in predicate
    absolute_file_name/3 where a directory can be returned when looking for a
    regular file (fixed in the current beta of the 6.0.7 version).

    Restored the hacks in the SWI-Prolog and YAP config files, broken in
    the previous release, that allow calling the Prolog built-in predicates
    phrase/2-3 with a Object::GRBody goal in the first argument.

    Updated the SWI-Prolog config file in order to use the numbervars/3 option
    singleton(true) in the auxiliary predicates for pretty printing non-ground
    terms.

    Added predicates intersection/4 and union/4 to the library support for
    ordered sets (protocol "setp" and object "set").

    Removed some unused files from the "coinduction" example.


2.41.0 - September 15, 2010

    Added experimental support for coinductive predicates to the Logtalk
    compiler using a coinductive/1 directive. Requires a back-end Prolog
    compiler providing minimal support for cyclic terms (currently, YAP,
    CxProlog, ECLiPSe, SICStus Prolog, and SWI-Prolog). Thanks to Gopal
    Gupta, Neda Saeedloei, Feliks Kluzniak, Ajay Bansal, and Vitor Santos
    Costa for feedback and implementation suggestions.

    Added a "coinductive" predicate property.

    Added a "coinduction" read-only flag.
